--- a/Pages/TimeEntry.cshtml
+++ b/Pages/TimeEntry.cshtml
@@ -1,5 +1,8 @@
 ﻿@page
 @model TimeEntryModel
+@{
+    ViewData["Title"] = "Time Entry";
+}
 
 <div class="container">
     <h2 class="my-4">Time Entry</h2>
