--- a/Pages/Dashboard.cshtml
+++ b/Pages/Dashboard.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Last_Try.Models
+@model TimeEntryModel
 @{
     ViewData["Title"] = "Intern Dashboard";
 }
@@ -38,7 +38,7 @@
                     <input type="date" class="form-control" id="date" name="date" required>
                 </div>
                 <div class="form-group">
-                    <label for="hours">Hours</label>
+                    <label for="Time In">Time In</label>
                     <input type="number" class="form-control" id="hours" name="hours" min="0" step="1" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
