--- a/Pages/TimeEntry.cshtml
+++ b/Pages/TimeEntry.cshtml
@@ -9,12 +9,14 @@
 
     <form method="post" class="needs-validation" novalidate>
         <div class="form-row">
-            @for (int i = 0; i < 7; i++)
+
+
+            @for (int i = 0; i < Model.WeekDates.Count; i++)
             {
-                var day = (DayOfWeek)i;
+                var date = Model.WeekDates[i];
                 <div class="col-md-6 mb-3">
-                    <label for="timeEntries[@i].Day">@day</label>
-                    <input type="hidden" asp-for="TimeEntries[@i].Day" value="@day" />
+                    <label for="timeEntries[@i].Date">@date.ToString("d")</label>
+                    <input type="hidden" asp-for="TimeEntries[@i].Date" value="@date" />
                     <div class="input-group">
                         <input asp-for="TimeEntries[@i].TimeIn" type="time" class="form-control" id="timeEntries[@i].TimeIn" required>
                         <input asp-for="TimeEntries[@i].TimeOut" type="time" class="form-control" id="timeEntries[@i].TimeOut" required>
