--- a/Views/Index.cshtml
+++ b/Views/Index.cshtml
@@ -15,9 +15,9 @@
         @foreach (var entry in Model)
         {
             <tr>
-                <td>@entry.Date.ToShortDateString()</td>
+                <td>@entry.Date</td>
                 <td>@entry.Hours</td>
-                <td>@(entry.Approved ? "Yes" : "No")</td>
+                @*<td>@(entry.Approved ? "Yes" : "No")</td>*@
                 <td>
                     <a asp-action="Edit" asp-route-id="@entry.Id">Edit</a> |
                     <a asp-action="Delete" asp-route-id="@entry.Id">Delete</a>
